--- a/aula 3/aula 2/novo.html
+++ b/aula 3/aula 2/novo.html
@@ -11,10 +11,10 @@
     <header>
         <h1>Página de Receitas</h1>
         <nav>
-            <a href="">Home</a>
-            <a href="">Pamonha</a>
-            <a href="">Vatapá</a>
-            <a href="">Paçoca</a>
+            <a href="index.html">Home</a>
+            <a href="pamonha.html">Pamonha</a>
+            <a href="vatapa.html">Vatapá</a>
+            <a href="paçoca.html">Paçoca</a>
         </nav>
     </header>
     <hr>
