--- a/Aula 4/macarronada.html
+++ b/Aula 4/macarronada.html
@@ -1,46 +1,40 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página de Receitas</title>
+    <title>Document</title>
 </head>
-
 <body>
     <header>
         <h1>Página de Receitas</h1>
         <nav>
             <a href="index.html">Home</a>
-            <a href="pamonha.html">Pamonha</a>
-            <a href="vatapa.html">Vatapá</a>
-            <a href="paçoca.html">Paçoca</a>
+            <a href="bolo.html">Bolo</a>
+            <a href="macarronada.html">Macarronada</a>
+            <a href="omelete.html">Omelete</a>
         </nav>
     </header>
-    <hr>
+</body>
+</html>
+<hr>
     <main>
-         <h2> Esta é uma página para encontrar receitas </h2>
+         <h2> Receita de massas </h2>
         <article>
-            <h3>Receitas práticas</h3>
+            <h3>Macarronada</h3>
+            <img src="macarronada.jpg"
+            alt="Macarronada"
+            width="300px"
+            />
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem facere dolorum consequuntur ratione in
                 fugit dolore temporibus et repellat odio, porro,<br> cum, soluta placeat magni quo assumenda obcaecati
                 qui saepe!</p>
-            </p>
         </article>
-
         <hr>
-
         <article>
-            <h3>Receitas mais elaboradas para jantares</h3>
+            <h3>Molho especial</h3>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa nisi voluptatem doloremque voluptates enim corrupti illum! Fugit minus at,<br> officiis quos expedita non, culpa ab, suscipit inventore porro minima incidunt.</p>
         </article>
 
     </main>
     <hr>
-    <footer>
-        todos os direitos reservados
-    </footer>
-
-</body>
-
-</html>
