--- a/Aula 4/index.html
+++ b/Aula 4/index.html
@@ -7,9 +7,30 @@
     <title>Página de Receitas</title>
 </head>
 
+<style>
+    header{
+        background-color: rgb(241, 241, 230);
+        text-align: center;
+        border: solid black 2px;
+        border-radius: 5px;
+    }
+    a{
+        text-decoration: none;
+        color: black;
+        font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    }
+    .artigos{
+        font-family: sans-serif;
+    }
+    body{
+        background-color: blueviolet;
+    }
+</style>
+
+
 <body>
-    <header>
-        <h1>Página de Receitas</h1>
+    <header >
+        <h1 style="color:rgb(97, 151, 66); font-family:sans-serif;" >Página de Receitas</h1>
         <nav>
             <a href="index.html">Home</a>
             <a href="bolo.html">Bolo</a>
@@ -20,14 +41,14 @@
     <hr>
     <main>
          <h2> Esta é uma página para encontrar receitas </h2>
-        <article>
+        <article class="artigos">
             <h3>Receitas práticas</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quidem facere dolorum consequuntur ratione in
                 fugit dolore temporibus et repellat odio, porro,<br> cum, soluta placeat magni quo assumenda obcaecati
                 qui saepe!</p>
         </article>
         <hr>
-        <article>
+        <article class="artigos">
             <h3>Receitas mais elaboradas para jantares</h3>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsa nisi voluptatem doloremque voluptates enim corrupti illum! Fugit minus at,<br> officiis quos expedita non, culpa ab, suscipit inventore porro minima incidunt.</p>
         </article>
